--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
     "@types/quick-hash": "^1.0.0",
+    "quick-hash": "^1.0.4",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "quick-hash": "^1.0.4"
+    "vite": "^4.4.5"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.4",
+    "uuid": "^9.0.1"
   }
 }
